--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,4 @@ url: "http://adlerplanetarium.org" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+exclude: ['node_modules', 'package.json']
